# farm-plugin-html-inject

./: Cargo.toml  README.md  farm_plugin_html_inject.darwin-arm64.node  index.d.ts  index.js  package.json  pnpm-lock.yaml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: farm.config.ts  package.json
scripts/: index.js
src/: lib.rs
