[package]
edition = "2021"
name = "farm_plugin_html_inject"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
napi = "2"
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
